Revert "fix dropdown outside click & items layout bug"
This reverts commit 80cfabd48d6493381650191810351e07155ae6a8.

--- a/src/component/UI/DropDown/DropDown.scss
+++ b/src/component/UI/DropDown/DropDown.scss
@@ -13,6 +13,7 @@
   }
   .dropdown-item {
     display: flex;
+    justify-content: flex-end;
     padding: 0.5rem 0.75rem 0.5rem 3rem;
     font-size: 0.8rem;
   }
